syntax = "proto3";
option go_package = "golang/grpc/proto";

message Amount {
  string currency = 1;
  int64 amount = 2;
}

message CreateRequest {
  string from = 1;
  string to = 2;
  Amount total = 3;
}

message CreateResponse {
  bytes pdf = 1;
}

service Invoicer {
  // Create an invoice
  rpc Create (CreateRequest) returns (CreateResponse) {}
}